--- a/ai-projects.html
+++ b/ai-projects.html
@@ -132,7 +132,406 @@ document.addEventListener('keydown', function(event) {
             <p style="margin-top: 0.5rem;">На этой странице собраны материалы, созданные с использованием ИИ-инструментов (Claude AI, ChatGPT, Midjourney, Suno AI, Perplexity и др.) для разных аудиторий: учеников, родителей и коллег-педагогов.</p>
         </div>
 
-       <!-- СЕКЦИЯ: Творческие проекты -->
+       <!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ИИ в образовании — Персональный сайт преподавателя ОБЗР</title>
+    <style>
+        :root {
+            --color-primary: #003D7A;
+            --color-surface: #F5F7FA;
+            --color-text-primary: #2C3E50;
+            --color-text-secondary: #7F8C8D;
+            --color-warning: #FFA500;
+            --color-danger: #E53935;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: var(--color-text-primary);
+            padding: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            background: #FFFFFF;
+        }
+
+        /* Заголовок страницы */
+        .page-header {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        .page-header h1 {
+            font-size: 2.5rem;
+            color: var(--color-primary);
+            margin-bottom: 1rem;
+        }
+
+        .page-header p {
+            font-size: 1.1rem;
+            color: var(--color-text-secondary);
+        }
+
+        /* Секция с контентом */
+        .content-section {
+            margin: 2rem 0;
+        }
+
+        /* Accordion Header (кликабельный заголовок) */
+        .accordion-header {
+            background: linear-gradient(135deg, #003D7A 0%, #00518A 100%);
+            color: white;
+            padding: 1.5rem;
+            border-radius: 12px;
+            cursor: pointer;
+            user-select: none;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 12px rgba(0, 61, 122, 0.2);
+        }
+
+        .accordion-header:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0, 61, 122, 0.3);
+        }
+
+        .accordion-header:focus {
+            outline: 3px solid #FFA500;
+            outline-offset: 2px;
+        }
+
+        .accordion-title {
+            font-size: 1.5rem;
+            font-weight: 700;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            flex-wrap: wrap;
+        }
+
+        .accordion-icon {
+            font-size: 1.25rem;
+            transition: transform 0.3s ease;
+            flex-shrink: 0;
+        }
+
+        .accordion-header.active .accordion-icon {
+            transform: rotate(180deg);
+        }
+
+        .accordion-status {
+            font-size: 0.875rem;
+            opacity: 0.9;
+            font-weight: 400;
+        }
+
+        /* Accordion Content (раскрывающийся контент) */
+        .accordion-content {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.5s ease-out, padding 0.3s ease;
+            padding: 0 1.5rem;
+        }
+
+        .accordion-content.active {
+            max-height: 8000px;
+            padding: 2rem 1.5rem;
+            transition: max-height 1s ease-in, padding 0.3s ease;
+        }
+
+        .accordion-inner {
+            background: white;
+            border-radius: 12px;
+            padding: 2rem;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+        }
+
+        .accordion-description {
+            margin-top: 0;
+            color: var(--color-text-secondary);
+            font-size: 0.95rem;
+            line-height: 1.6;
+            margin-bottom: 2rem;
+        }
+
+        /* Сетка категорий */
+        .modules-grid {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .module-accordion {
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .module-header {
+            background: var(--color-surface);
+            padding: 1.25rem 1.5rem;
+            cursor: pointer;
+            user-select: none;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            transition: all 0.3s ease;
+            border-left: 4px solid var(--color-primary);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+        }
+
+        .module-header:hover {
+            background: #E8EDF2;
+            transform: translateX(5px);
+            box-shadow: 0 4px 12px rgba(0, 61, 122, 0.1);
+        }
+
+        .module-header:focus {
+            outline: 2px solid var(--color-primary);
+            outline-offset: 2px;
+        }
+
+        .module-header.active {
+            background: linear-gradient(135deg, #003D7A 0%, #00518A 100%);
+            color: white;
+        }
+
+        .module-header.active .module-icon {
+            transform: rotate(180deg);
+        }
+
+        .module-title-wrapper {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            flex-grow: 1;
+        }
+
+        .module-number {
+            font-size: 1.5rem;
+            font-weight: 700;
+            opacity: 0.7;
+        }
+
+        .module-title {
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin: 0;
+        }
+
+        .module-icon {
+            font-size: 1.25rem;
+            transition: transform 0.3s ease;
+            flex-shrink: 0;
+        }
+
+        .module-content {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.5s ease-out;
+            background: white;
+        }
+
+        .module-content.active {
+            max-height: 3000px;
+            transition: max-height 0.7s ease-in;
+        }
+
+        .module-inner {
+            padding: 1.5rem;
+            border: 1px solid #E0E7EE;
+            border-top: none;
+        }
+
+        .project-description {
+            margin-bottom: 1.5rem;
+            color: var(--color-text-secondary);
+            font-size: 0.95rem;
+        }
+
+        /* Карточки проектов */
+        .content-block {
+            background: #FAFBFC;
+            padding: 1.5rem;
+            border-radius: 8px;
+            margin-bottom: 1rem;
+            border-left: 3px solid var(--color-primary);
+        }
+
+        .content-block:last-of-type {
+            margin-bottom: 0;
+        }
+
+        .content-block h4 {
+            color: var(--color-primary);
+            margin: 0 0 1rem 0;
+            font-size: 1.1rem;
+        }
+
+        .content-block p {
+            margin: 0.5rem 0;
+            line-height: 1.8;
+        }
+
+        .author-meta {
+            margin-top: 1rem;
+            padding-top: 1rem;
+            border-top: 1px solid #E0E7EE;
+            font-size: 0.9rem;
+            color: var(--color-text-secondary);
+        }
+
+        .author-meta strong {
+            color: var(--color-text-primary);
+        }
+
+        .placeholder-text {
+            color: var(--color-text-secondary);
+            font-style: italic;
+            padding: 1rem;
+            text-align: center;
+            background: #F9FAFB;
+            border-radius: 8px;
+            margin-top: 1rem;
+        }
+
+        /* Предупреждение об этике */
+        .warning-box {
+            background: linear-gradient(135deg, #FFF9E6 0%, #FFF3CD 100%);
+            border-left: 4px solid var(--color-warning);
+            padding: 1.5rem;
+            border-radius: 8px;
+            margin-top: 2rem;
+            box-shadow: 0 2px 8px rgba(255, 165, 0, 0.1);
+        }
+
+        .warning-box strong {
+            color: #CC8800;
+            font-size: 1.05rem;
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+
+        /* Мобильная адаптация */
+        @media (max-width: 768px) {
+            body {
+                padding: 1rem;
+            }
+
+            .page-header h1 {
+                font-size: 2rem;
+            }
+
+            .accordion-title {
+                font-size: 1.2rem;
+            }
+
+            .accordion-header {
+                padding: 1rem;
+            }
+
+            .accordion-icon {
+                position: absolute;
+                right: 1rem;
+                top: 1rem;
+            }
+
+            .accordion-content.active {
+                padding: 1rem 0.5rem;
+            }
+
+            .accordion-inner {
+                padding: 1.5rem 1rem;
+            }
+
+            .module-header {
+                padding: 1rem;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 0.5rem;
+            }
+
+            .module-icon {
+                position: absolute;
+                right: 1rem;
+                top: 1rem;
+            }
+
+            .module-title {
+                font-size: 1rem;
+                padding-right: 2rem;
+            }
+
+            .module-number {
+                font-size: 1.25rem;
+            }
+
+            .module-inner {
+                padding: 1rem;
+            }
+
+            .content-block {
+                padding: 1rem;
+            }
+        }
+
+        /* Анимации */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .content-section {
+            animation: fadeIn 0.5s ease-out;
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .module-accordion {
+            animation: slideIn 0.3s ease-out;
+            animation-fill-mode: backwards;
+        }
+
+        .module-accordion:nth-child(1) { animation-delay: 0.05s; }
+        .module-accordion:nth-child(2) { animation-delay: 0.1s; }
+        .module-accordion:nth-child(3) { animation-delay: 0.15s; }
+    </style>
+</head>
+<body>
+
+    <!-- Заголовок страницы -->
+    <div class="page-header">
+        <h1>🤖 ИИ в образовании</h1>
+        <p>Использование искусственного интеллекта в преподавании ОБЗР и творческих проектах учащихся</p>
+    </div>
+
+    <!-- СЕКЦИЯ: Творческие проекты -->
     <section class="content-section">
         <!-- Кликабельный заголовок -->
         <div class="accordion-header" 
@@ -427,11 +826,6 @@ document.addEventListener('keydown', function(event) {
 
 </body>
 </html>
-
-
-
-
-
         <section class="section">
             <h2>👪 Для родителей — Практические материалы</h2>
             <div class="card">
