--- a/ai-projects.html
+++ b/ai-projects.html
@@ -778,69 +778,319 @@ document.addEventListener('keydown', function(event) {
         });
     </script>
 
-</body>
-</html>
-        <section class="section">
-            <h2>👪 Для родителей — Практические материалы</h2>
-            <div class="card">
-                <h3>Памятки по безопасности</h3>
-                <p>Созданные с помощью ИИ памятки для родителей по обеспечению безопасности детей.</p>
-                
-                <div class="content-block">
-                    <h4>Памятка "Безопасность ребёнка дома"</h4>
-                    <ul style="line-height: 1.8;">
-                        <li><strong>Пожарная безопасность:</strong> Объясните детям правила обращения с электроприборами, спичками, свечами</li>
-                        <li><strong>Электробезопасность:</strong> Научите детей не трогать розетки мокрыми руками, не перегружать удлинители</li>
-                        <li><strong>Газовая безопасность:</strong> Расскажите, что делать при запахе газа</li>
-                        <li><strong>Окна и балконы:</strong> Установите замки на окна, объясните опасность москитных сеток</li>
-                        <li><strong>Аптечка:</strong> Держите лекарства в недоступном месте, объясните, что нельзя принимать без разрешения</li>
-                    </ul>
-                    <p style="margin-top: 1rem;"><em>[Скачать полную памятку в PDF]</em></p>
-                    <div class="author-meta">
-                        <strong>Инструмент:</strong> Claude AI<br>
-                        <strong>Дата создания:</strong> Октябрь 2025
-                    </div>
-                </div>
+/* ============================================ */
+/* CSS ДЛЯ СЕКЦИИ "ДЛЯ РОДИТЕЛЕЙ"              */
+/* Скопируйте этот код в конец вашего <style>  */
+/* ============================================ */
 
-                <div class="content-block">
-                    <h4>Инфографика "Как говорить с детьми о безопасности"</h4>
-                    <p><em>[Здесь будет инфографика с советами для родителей]</em></p>
-                    <ul style="margin-top: 1rem;">
-                        <li>Используйте простые слова без запугивания</li>
-                        <li>Объясняйте на примерах из повседневной жизни</li>
-                        <li>Хвалите за соблюдение правил безопасности</li>
-                        <li>Личный пример — лучшее обучение</li>
-                    </ul>
-                    <div class="author-meta">
-                        <strong>Инструмент:</strong> ChatGPT + Canva<br>
-                        <strong>Дата создания:</strong> Сентябрь 2025
-                    </div>
-                </div>
-            </div>
+/* === СЕКЦИЯ ДЛЯ РОДИТЕЛЕЙ (главная вкладка) === */
+.parents-section {
+    margin: 3rem 0;
+}
 
-            <div class="card">
-                <h3>Рекомендации по домашней подготовке</h3>
-                <div class="content-block">
-                    <h4>Как помочь ребёнку подготовиться к учебным сборам</h4>
-                    <p><strong>За 2 недели до сборов:</strong></p>
-                    <ul>
-                        <li>Обсудите программу сборов, развейте страхи и сомнения</li>
-                        <li>Проверьте физическую форму — предложите утренние пробежки</li>
-                        <li>Подготовьте необходимые вещи (список выдаётся заранее)</li>
-                    </ul>
-                    <p style="margin-top: 1rem;"><strong>Во время сборов:</strong></p>
-                    <ul>
-                        <li>Будьте на связи, но не звоните слишком часто — дайте адаптироваться</li>
-                        <li>Интересуйтесь успехами, а не жалобами</li>
-                        <li>Поддерживайте морально</li>
-                    </ul>
-                    <div class="author-meta">
-                        <strong>Инструмент:</strong> Claude AI<br>
-                        <strong>Дата создания:</strong> Апрель 2025
-                    </div>
-                </div>
-            </div>
-        </section>
+/* Заголовок секции для родителей (как у конспектов уроков) */
+.parents-accordion-header {
+    background: linear-gradient(135deg, #003D7A 0%, #00518A 100%);
+    color: white;
+    padding: 1.5rem;
+    border-radius: 12px;
+    cursor: pointer;
+    user-select: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 12px rgba(0, 61, 122, 0.2);
+}
+
+.parents-accordion-header:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 20px rgba(0, 61, 122, 0.3);
+}
+
+.parents-accordion-header:focus {
+    outline: 3px solid #FFA500;
+    outline-offset: 2px;
+}
+
+.parents-accordion-header.active .accordion-icon {
+    transform: rotate(180deg);
+}
+
+/* Контент секции для родителей */
+.parents-accordion-content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out, padding 0.3s ease;
+    padding: 0 1.5rem;
+}
+
+.parents-accordion-content.active {
+    max-height: 5000px;
+    padding: 2rem 1.5rem;
+    transition: max-height 1s ease-in, padding 0.3s ease;
+}
+
+.parents-accordion-inner {
+    background: white;
+    border-radius: 12px;
+    padding: 2rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+.parents-description {
+    margin-top: 0;
+    color: var(--color-text-secondary);
+    font-size: 0.95rem;
+    line-height: 1.6;
+    margin-bottom: 2rem;
+}
+
+/* Уменьшенный шрифт для текста в скобках (как в секции "Для детей") */
+.accordion-status {
+    font-size: 0.85rem;
+    font-weight: 400;
+    opacity: 0.9;
+}
+
+/* === КАТЕГОРИИ МАТЕРИАЛОВ (внутренние вкладки) === */
+.parents-categories-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.parent-category-accordion {
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.parent-category-header {
+    background: var(--color-surface);
+    padding: 1.25rem 1.5rem;
+    cursor: pointer;
+    user-select: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.3s ease;
+    border-left: 4px solid var(--color-primary);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+}
+
+.parent-category-header:hover {
+    background: #E8EDF2;
+    transform: translateX(5px);
+    box-shadow: 0 4px 12px rgba(0, 61, 122, 0.1);
+}
+
+.parent-category-header:focus {
+    outline: 2px solid var(--color-primary);
+    outline-offset: 2px;
+}
+
+.parent-category-header.active {
+    background: linear-gradient(135deg, #003D7A 0%, #00518A 100%);
+    color: white;
+}
+
+.parent-category-header.active .category-icon {
+    transform: rotate(180deg);
+}
+
+.category-title-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    flex-grow: 1;
+}
+
+.category-emoji {
+    font-size: 1.5rem;
+    opacity: 0.9;
+}
+
+.category-title {
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin: 0;
+}
+
+.category-icon {
+    font-size: 1.25rem;
+    transition: transform 0.3s ease;
+    flex-shrink: 0;
+}
+
+/* Контент категории */
+.parent-category-content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out;
+    background: white;
+}
+
+.parent-category-content.active {
+    max-height: 2000px;
+    transition: max-height 0.7s ease-in;
+}
+
+.parent-category-inner {
+    padding: 1.5rem;
+    border: 1px solid #E0E7EE;
+    border-top: none;
+}
+
+/* === КАРТОЧКИ МАТЕРИАЛОВ === */
+.content-block {
+    background: var(--color-surface);
+    padding: 1.5rem;
+    border-radius: 10px;
+    margin-bottom: 1.5rem;
+    border-left: 4px solid var(--color-primary);
+    transition: all 0.3s ease;
+}
+
+.content-block:hover {
+    background: #E8EDF2;
+    transform: translateX(5px);
+    box-shadow: 0 4px 12px rgba(0, 61, 122, 0.1);
+}
+
+.content-block:last-child {
+    margin-bottom: 0;
+}
+
+.content-block h4 {
+    color: var(--color-primary);
+    margin-top: 0;
+    margin-bottom: 1rem;
+    font-size: 1.1rem;
+}
+
+.content-block ul {
+    margin: 0.75rem 0;
+    padding-left: 1.5rem;
+}
+
+.content-block li {
+    margin-bottom: 0.5rem;
+    line-height: 1.8;
+}
+
+.content-block p {
+    line-height: 1.8;
+    color: var(--color-text-primary);
+    margin: 0.5rem 0;
+}
+
+.content-block em {
+    color: var(--color-text-secondary);
+    display: block;
+    margin-top: 1rem;
+}
+
+.author-meta {
+    background: white;
+    padding: 0.75rem 1rem;
+    border-radius: 8px;
+    margin-top: 1rem;
+    font-size: 0.9rem;
+    color: var(--color-text-secondary);
+    border: 1px solid #E0E7EE;
+}
+
+.author-meta strong {
+    color: var(--color-text-primary);
+}
+
+.placeholder-text {
+    color: var(--color-text-secondary);
+    font-style: italic;
+    padding: 1rem;
+    text-align: center;
+    background: #F9FAFB;
+    border-radius: 8px;
+    margin-top: 1rem;
+}
+
+/* === МОБИЛЬНАЯ АДАПТАЦИЯ === */
+@media (max-width: 768px) {
+    .parents-accordion-header {
+        padding: 1rem;
+    }
+
+    .accordion-title {
+        font-size: 1.2rem;
+    }
+
+    .parents-accordion-content.active {
+        padding: 1rem 0.5rem;
+    }
+
+    .parents-accordion-inner {
+        padding: 1.5rem 1rem;
+    }
+
+    .parent-category-header {
+        padding: 1rem;
+    }
+
+    .category-title {
+        font-size: 1rem;
+    }
+
+    .category-emoji {
+        font-size: 1.25rem;
+    }
+
+    .parent-category-inner {
+        padding: 1rem;
+    }
+
+    .content-block {
+        padding: 1rem;
+    }
+
+    .content-block h4 {
+        font-size: 1rem;
+    }
+}
+
+/* === АНИМАЦИИ === */
+@keyframes fadeInParents {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.parents-section {
+    animation: fadeInParents 0.5s ease-out;
+}
+
+@keyframes slideInCategory {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.parent-category-accordion {
+    animation: slideInCategory 0.3s ease-out;
+    animation-fill-mode: backwards;
+}
+
+.parent-category-accordion:nth-child(1) { animation-delay: 0.05s; }
+.parent-category-accordion:nth-child(2) { animation-delay: 0.1s; }
 
         <section class="section">
             <h2>👨‍🏫 Для коллег-педагогов — Методические материалы</h2>
